--- a/public/css/pyramid.css
+++ b/public/css/pyramid.css
@@ -81,3 +81,28 @@ svg {
   .team2 {
 	filter: hue-rotate(220deg) saturate(2);
   }
+
+  #joystick-container {
+	position: fixed;
+	bottom: 50px;
+	left: 50px;
+	width: 150px;
+	height: 150px;
+}
+#action-button {
+	position: fixed;
+	bottom: 50px;
+	right: 50px;
+	width: 80px;
+	height: 80px;
+	font-size: 20px;
+	border-radius: 40%;
+}
+
+svg {
+    width: 100%;
+    height: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
+    object-fit: contain; /* Mantiene proporciones */
+}
