--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,3 @@
-/* From Uiverse.io by nathann09 */ 
 :root {
   margin: 0;
   padding: 0;
@@ -75,4 +74,10 @@
   
   .signup-link a {
     text-decoration: underline;
+  }
+  .error{
+    color: red;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    text-align: center;
   }
